@@ -54,6 +54,8 @@ import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import org.xml.sax.helpers.DefaultHandler;
 
+import com.google.common.collect.Lists;
+
 /** Initial implementation of a class that generates a Collection with Documents from a 
   * series of XML files.<p>
   * <b>Properties:</b><ul>
@@ -341,13 +343,14 @@ public class SimpleXMLCollection implements Collection
 	/**
 	 * The list of files to process.
 	 */
-	protected LinkedList<String> FilesToProcess = new LinkedList<String>();
+	protected List<String> FilesToProcess;
 	/** 
 	 * Construct a SimpleXMLCollection
 	 * @param filesToProcess
 	 */
 	public SimpleXMLCollection(List<String> filesToProcess)
 	{
+		FilesToProcess = Lists.newArrayList();
 		FilesToProcess.addAll(filesToProcess);
 		initialiseTags();
 		initialiseParser();
@@ -369,23 +372,7 @@ public class SimpleXMLCollection implements Collection
 	 */
 	public SimpleXMLCollection(String CollectionSpecFilename, String BlacklistSpecFilename)
 	{
-		//load up the list of files to be processed from the collection.spec
-		//reads the collection specification file
-		try {
-			BufferedReader br = Files.openFileReader(CollectionSpecFilename); 
-			String filename = null;
-			while ((filename = br.readLine()) != null) {
-				if (!filename.startsWith("#") && !filename.equals(""))
-					FilesToProcess.addLast(filename);
-			}
-			br.close();
-			if(logger.isInfoEnabled()){
-			logger.info("Finished reading collection specification");
-			}
-		} catch (IOException ioe) {
-			logger.error("Input output exception while loading the collection.spec file. "
-				+ "("+CollectionSpecFilename+").", ioe);
-		}
+		this(CollectionFactory.loadCollectionSpecFileList(CollectionSpecFilename));
 		
 		//reads the trec_blacklist_docid file
 		if (BlacklistSpecFilename != null && BlacklistSpecFilename.length() >0)
@@ -406,11 +393,6 @@ public class SimpleXMLCollection implements Collection
 							+ "Stack trace follows", ioe);
 			}
 		}
-		
-		
-		initialiseTags();
-		initialiseParser();
-		
 	}
 	
 	protected void initialiseParser()
@@ -575,7 +557,7 @@ public class SimpleXMLCollection implements Collection
 	{
 		if (FilesToProcess.size() == 0)
 			return false;
-		String filename = (String)FilesToProcess.removeFirst();
+		String filename = (String)FilesToProcess.remove(0);
 		if(logger.isDebugEnabled()){
 			logger.debug("Processing file "+filename);
 		}
